# typerighter

./: Cargo.toml  README.md  practice_sets.yml
src/: align.rs  attempter.rs  chunk.rs  hand.rs  main.rs  practice_set.rs  stats.rs  typed_chars.rs
