[package]
name = "teaches-typing"
version = "0.1.0"
authors = ["Andrés Medina <andresnrx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.5"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
